crates/xoft-cli/tests/snapshots/broken_fixtures__bad_case_label.snap
---
source: crates/xoft-cli/tests/broken_fixtures.rs
expression: result.rendered
---
error: ident
  ┌─ bad_case_label.mod:5:6
  │
5 │     +: x := 1
  │      ^
