crates/xoft-cli/tests/snapshots/broken_fixtures__malformed_procedure_heading.snap
---
source: crates/xoft-cli/tests/broken_fixtures.rs
expression: result.rendered
---
error: ident
  ┌─ malformed_procedure_heading.mod:2:15
  │
2 │ PROCEDURE P(x: );
  │               ^
