crates/xoft-cli/tests/snapshots/broken_fixtures__unbalanced_begin_end.snap
---
source: crates/xoft-cli/tests/broken_fixtures.rs
expression: result.rendered
---
error: unexpected token in module body
  ┌─ unbalanced_begin_end.mod:5:1
  │
5 │ END;
  │ ^^^^
