crates/xoft-cli/tests/snapshots/broken_fixtures__unbalanced_parens.snap
---
source: crates/xoft-cli/tests/broken_fixtures.rs
expression: result.rendered
---
error: )
  ┌─ unbalanced_parens.mod:4:14
  │
4 │   x := (1 + 2
  │              ^
